--- a/css/style.css
+++ b/css/style.css
@@ -1694,7 +1694,7 @@ h4, .h4 {
 
 h5, .h5 {
   font-size: 22px;
-  border:dotted 2px #000;
+  border:solid 1px #000;
   padding:5px 10px;
 }
 
@@ -2990,7 +2990,7 @@ span#b-5:focus ~ .slider .inset { margin-left:-400%; }
 
 }
 
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 640px) {
 
   
   #content-slider #main { padding: 1% 0; width: 100%; /*bottom: -15.5em;*/ z-index: 10; position: absolute; text-align: center; background: rgba(0, 0, 0, 0.71); }
@@ -3014,7 +3014,7 @@ span#b-5:focus ~ .slider .inset { margin-left:-400%; }
 
 
 .darktransparent {
-  background-color: rgba(0, 0, 0, 0.8);
+  background-color: rgba(49, 46, 61, 0.8);
   padding:15px;
   text-align: left;
 }
@@ -24884,7 +24884,7 @@ figcaption .project-creator {
 } 
 
 .project figure:hover .actions {
-    background-color: rgba(0,0,0,.8);
+    background-color: rgba(49, 46, 61, .8);
 }
 
 .project figure:hover .actions-horizontal {
@@ -24904,7 +24904,7 @@ figcaption .project-creator {
     right:0;
     z-index: 1;
     opacity: 1;
-    background-color: rgba(35,31,32,.6);
+    background-color: rgba(49, 46, 61, .6);
     -ms-transition: all .4s ease-out;
     -webkit-transition: all .4s ease-out;
     -moz-transition: all .4s ease-out;
@@ -24924,7 +24924,7 @@ figcaption .project-creator {
     right:0;
     z-index: 1;
     opacity: 1;
-    background-color: rgba(35,31,32,.6);
+    background-color: rgba(49, 46, 61,.6);
     -ms-transition: all .4s ease-out;
     -webkit-transition: all .4s ease-out;
     -moz-transition: all .4s ease-out;
@@ -26011,6 +26011,7 @@ a.thumbnail:hover {
 
 .page .text-normal {
   font-style: normal;
+  color:#b988b9;
 }
 
 .page .text-underline {
@@ -43037,7 +43038,7 @@ li { list-style-type:none;}
 
 @media (min-width: 992px) {
   .owl-carousel-default .owl-dots {
-    margin-top: 70px;
+    margin-top: 10px;
   }
 }
 
