--- a/css/style.css
+++ b/css/style.css
@@ -2964,7 +2964,7 @@ span#b-5:focus ~ .slider .inset { margin-left:-400%; }
     
 @media only screen and (max-width: 640px) {
 
-  #content-slider .slider [class*='title-'] { background-color: rgba(35,31,32,.6); text-align:center;}
+  #content-slider .slider [class*='title-'] { background-color: rgba(49, 46, 61, 0.6); text-align:center;}
 
   #content-slider span.first { display: none; }
 
